# delta

./: .gitignore  AGENTS.md  delta_os.docx  pyproject.toml  readme.md  requirements.txt  roadmap_docx.docx
.github/workflows/: ci.yml
configs/: app.yaml  risk_profiles.yaml  scan_profiles.yaml  trade_profiles.yaml  voice_profiles.yaml
data/sample/: reliance_1m.csv  watchlists.yaml
docs/: CODEX_WORKFLOW.md  DECISIONS.md  DEVELOPMENT_LOG.md  FEEDBACK_CHECKLIST.md  LIVE_INTEGRATION_SPEC.md  PROJECT_CONTEXT.md  TASKS.md
src/delta_os/: __init__.py
tests/fixtures/: README.md  channel_like.csv  false_breakout_sweep.csv  imperfect_trendline_respect.csv  noisy_wedge.csv  ranking_cli_output.json  risk_profiles_summary.json  scan_cli_output.json  scan_online_timeout_error_output.json  scan_profile_compression_summary.json  scan_profile_override_fallback_summary.json  scan_profiles_summary.json  trade_profiles_summary.json  ui_dashboard_state.json  universe_cli_output.json  universe_nifty50_cli_output.json  universe_watchlist_summary.json  voice_cli_alert_explanation_output.json  voice_cli_blocked_execution_output.json  voice_cli_mute_output.json  voice_cli_output.json  voice_online_timeout_error_output.json
tests/integration/: test_cli_outputs.py  test_load_tradable_universe.py  test_scan_csv_dataset.py
tests/unit/: test_alert_agent.py  test_config_loader.py  test_csv_provider_and_timeframes.py  test_data_agent_provider_health.py  test_ibkr_reference_broker.py  test_institutional_execution_risk_gate.py  test_live_session_orchestrator.py  (+17 more)
tools/: extract_docx.py
(+98 files in other folders)
