[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-os"
version = "0.1.0"
description = "DELTA OS Phase-1 offline structural market intelligence scaffold"
readme = "readme.md"
requires-python = ">=3.11"
authors = [{ name = "DELTA OS Contributors" }]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]
gui = [
  "PySide6>=6.7",
  "pyqtgraph>=0.13",
]
yaml = [
  "PyYAML>=6.0",
]

[project.scripts]
delta-os = "delta_os.presentation.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/delta_os"]
